--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Playground</title>
   </head>
+  <style>
+    /* System Fonts as used by GitHub */
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
+        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    }
+  </style>
 
   <body>
     <div id="root"></div>
